# evocv2_llm_microservice

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
app/: __init__.py  config.py  graph.py  main.py  memory.py  models.py
app/agents/: fixer.py  generator.py  modifier.py
app/agents/modules/: __init__.py  cell_names.py  llm_cell_generator.py
app/core/: llm_cell_generator.py  request_parser.py
app/prompts/: fixer.py  generator.py  modifier.py
app/routes/: __init__.py  fix.py  generate.py  modify.py
app/utils/: __init__.py  cell_names.py
test_outputs/: test_tsp_problem.ipynb  test_tsp_problem.py
tests/: test_agents.py  test_generated_code.py  test_mem0.py
