[project]
name = "evocv2-llm-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deap>=1.4.3",
    "fastapi[standard]>=0.128.0",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "instructor>=1.14.4",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "matplotlib>=3.10.8",
    "mem0ai>=1.0.2",
    "nbformat>=5.10.4",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.40.0",
]
